--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!-- shery js css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/aayushchouhan24/sheryjs@main/dist/Shery.css" />
+
+    <!-- remix icon -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
 
 
     <link rel="stylesheet" href="style.css" />
@@ -26,10 +30,12 @@
               <img src="assets/raybanlogo.png" alt="" />
               <a href="">Products</a>
               <a href="">About</a>
+              
             </div>
             <div id="nright">
               <a href="">LuXE</a>
               <a href="">PRICING</a>
+              <i class="ri-menu-3-line"></i>
             </div>
           </div>
 
